fixing application module issue

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,6 @@
   "config": {
     "sort-packages": true
   },
-  "require": {
-    "aroadahead/athena-core": "dev-main"
-  },
+  "require": {},
   "require-dev": {}
 }
