fixing application module issue

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
   "config": {
     "sort-packages": true
   },
+  "extra": {
+    "laminas": {
+      "module": "Application"
+    }
+  },
   "require": {},
   "require-dev": {}
 }
